<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="5dp"
    android:layout_marginEnd="5dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:text="@string/signin_header"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_vertical">

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textSize="18dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:inputType="textEmailAddress"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_vertical">

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textSize="18dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:inputType="textPassword" />
        </LinearLayout>

    <Button
        android:id="@+id/save"
        android:layout_marginTop="30dp"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:layout_gravity="center_horizontal|center_vertical"
        android:text="Submit"
        android:background="@color/abc_search_url_text_normal"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|center_vertical"
        android:layout_marginTop="30dp"
        android:text="@string/forgot_password"
        android:textSize="16sp"
        android:clickable="true" />

</LinearLayout>