<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView
        android:id="@+id/header"
        android:text="@string/hello_world"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="17dp"
        android:textColor="@color/material_blue_grey_900"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/header"
        android:orientation="vertical"
        android:gravity="center_vertical"
        android:layout_marginTop="80dp">

        <Button
            android:id="@+id/register"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/register"
            android:background="@color/abc_search_url_text_normal" />

        <Button
            android:id="@+id/sign"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:text="@string/sign_in"
            android:background="@color/abc_search_url_text_normal"/>

    </LinearLayout>



</RelativeLayout>
